--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1> Your To-Do list</h1>
-    <form method = "POST" action="/">
+    <form method = "POST" action="/lists/new">
       <input id = "id_new_item" name = "item_text" placeholder="Enter a To-Do item"/>
       {% csrf_token %}
     </form>
@@ -12,6 +12,6 @@
     {% for item in items %}
         <tr><td>{{forloop.counter}}. {{ item.text }}</td></tr>
     {% endfor %}
-</table>
+    </table>
   </body>
 </html>
