--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1> Your To-Do list</h1>
-    <form method = "POST" action="/lists/new">
+    <form method = "POST" action="/lists/{{list.id}}/add_item">
       <input id = "id_new_item" name = "item_text" placeholder="Enter a To-Do item"/>
       {% csrf_token %}
     </form>
