--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -1,12 +1,14 @@
-<html>
-  <head>
-    <title>To-Do lists</title>
-  </head>
-  <body>
-    <h1> Start a new To-Do list</h1>
-    <form method = "POST" action='/lists/new'>
+{% extends 'base.html' %}
+
+{% block header_text %}Start a new To-Do list{% endblock %}
+{% block form_action %}/lists/new{% endblock %}
+
+
+
+
+    <!-- <form method = "POST" action='/lists/new'>
       <input name = "item_text" id = "id_new_item" placeholder="Enter a To-Do item"/>
       {% csrf_token %}
     </form>
   </body>
-</html>
+</html> -->
