--- a/superlists/lists/templates/base.html
+++ b/superlists/lists/templates/base.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content ="width=device-width, initial-scale=1">
     <title>To-Do lists</title>
     <link href = "/static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href= "/static/base.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class= "col-md-6 col-md-offset-3">
+        <div class= "col-md-6 col-md-offset-3 jumbotron">
           <div class="text-center">
             <h1>{% block header_text %}{% endblock %}</h1>
             <form method = "POST" action="{% block form_action %}{% endblock %}">
-              <input id = "id_new_item" name = "item_text" placeholder="Enter a To-Do item"/>
+              <input id = "id_new_item" name = "item_text"
+              class="form-control input-lg"
+              placeholder="Enter a To-Do item"/>
               {% csrf_token %}
             </form>
           </div>
