--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -6,6 +6,7 @@
 {% block table %}
     <table id="id_list_table" class="table table-bordered">
     {% for item in items %}
+    <!-- #for item in list.item_set.all -->
         <tr><td>{{forloop.counter}}. {{ item.text }}</td></tr>
     {% endfor %}
     </table>
