Added view to mark items done

--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -4,10 +4,21 @@
 {% block form_action %}/lists/{{list.id}}/add_item{% endblock %}
 
 {% block table %}
+  <form id= "edit_items" method = "POST" action = "/lists/{{list.id}}/items/">
     <table id="id_list_table" class="table table-bordered">
-    {% for item in items %}
-    <!-- #for item in list.item_set.all -->
-        <tr><td>{{forloop.counter}}. {{ item.text }}</td></tr>
+      {% for item in list.item_set.all %}
+        <tr>
+          <td>{{forloop.counter}}.</td>
+          <td>
+            <input type = "checkbox"
+            name = "mark_item_done"
+            value = "{{ item.id }}"/>
+          </td>
+          <td> {{ item.text }}</td>
+        </tr>
     {% endfor %}
     </table>
+      <button id = "toggle_done" type = "submit">Mark Done</button>
+      {% csrf_token %}
+  </form>
 {% endblock %}
