--- a/superlists/lists/templates/base.html
+++ b/superlists/lists/templates/base.html
@@ -20,7 +20,7 @@
               placeholder="Enter a To-Do item"/>
               {% csrf_token %}
               {% if error %}
-                  <div class="form-group has-error"
+                  <div class="form-group has-error">
                       <span class ="help-block">{{ error }}</span>
                   </div>
               {% endif %}
