--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block header_text %}Your To-Do List{% endblock %}
-{% block form_action %}/lists/{{list.id}}/add_item{% endblock %}
+{% block form_action %}/lists/{{list.id}}/{% endblock %}
 
 {% block table %}
   <form id= "edit_items" method = "POST" action = "/lists/{{list.id}}/items/">
     <table id="id_list_table" class="table table-bordered">
       {% for item in list.item_set.all %}
         <tr>
-          <td>{{forloop.counter}}.</td>
+          <td>{{ forloop.counter }}.</td>
           <td>
             <input type = "checkbox"
             name = "mark_item_done"
