Add table of to do lists

--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -2,6 +2,19 @@
 
 {% block header_text %}Start a new To-Do list{% endblock %}
 {% block form_action %}/lists/new{% endblock %}
+{% block table %}
+
+<table id = "id_list_table" class="table">
+    {% for list in todo_lists %}
+      <tr>
+        <td> {{forloop.counter}}</td>
+        <td class="content">
+          <a href="/lists/{{list.id}}/">{{list.name}}</a>
+        </td>
+      </tr>
+    {% endfor %}
+</table>
+{% endblock %}
 
 
 
