--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -4,19 +4,21 @@
 {% block form_action %}/lists/{{list.id}}/{% endblock %}
 
 {% block table %}
-  <form id= "edit_items" method = "POST" action = "/lists/{{list.id}}/items/">
+  <form id= "edit_items"
+    method = "POST"
+    action = "/lists/{{list.id}}/items/">
     <table id="id_list_table" class="table table-bordered">
       {% for item in list.item_set.all %}
-        <tr>
+        <tr id "item_{{item.id}}">
           <td>{{ forloop.counter }}.</td>
           <td>
             <input type = "checkbox"
-            name = "mark_item_done"
-            value = "{{ item.id }}"
-            {% if item.is_done %}checked="checked"{% endif %}
-           />
+              name = "mark_item_done"
+              value = "{{ item.id }}"
+              {% if item.is_done %}checked="checked"{% endif %}
+             />
           </td>
-          <td {% if item.is_done %} class="todo-done" {% endif %}>
+          <td class= "content {% if item.is_done %}todo-done{% endif %}">
             {{ item.text }}
           </td>
         </tr>
